# open-perplexity-email-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
trigger_setup/: agent.py  constants.py  context_manager.py  database.py  email_handler.py  session_manager.py
